fix: resolve IntelliJ Plugin Verifier warnings for Marketplace compatibility
- Fix invalid plugin name character (arrow symbol → plain text)
- Configure Plugin Verifier for IC-2024.3 and IC-2025.1.1 compatibility
- Replace deprecated URL constructor with URI.toURL()
- Add @SuppressWarnings for Thread.getId() (requires Java 19+, limited to Java 17)
- Exclude kotlin-compiler-embeddable JAR from bundling to avoid IDE package conflicts
- Add release-verification.yml workflow for automated multi-version checks
- Update mise.toml and documentation with new verification requirements

Verification now runs automatically on PRs and can be triggered manually
for release preparation. All compatibility warnings resolved except
Thread.getId() which is acceptable for Java 17 compatibility.